--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="video_area">
-								<video id="slider_video1" src="video/slidervdeo1_1.mp4"></video>
+								<video id="slider_video1" src="video/slidervdeo1_1.mp4" poster="images/post_vdeo1_1.jpg"></video>
 							</div>
 							<div class="desc">
 								<p>갈매기, 오륙도, 산, 바다, 강</p>
@@ -133,7 +133,7 @@
 						</div>
 						<div class="swiper-slide">
 							<div class="video_area">
-								<video id="slider_video2" src="video/slidervdeo2_1.mp4"></video>
+								<video id="slider_video2" src="video/slidervdeo2_1.mp4" poster="images/post_vdeo2_1.jpg"></video>
 							</div>
 							<div class="desc">
 								<p>내셔널지오그래픽이 선정한<br> [2023 세계 최고 여행지 부산]</p>
